# Tech-Titans

./: .gitignore  Key points for Project.docx  README.md  This is to ensure that I am able to comm  asset-manifest.json  check_env.py  create_db.py  example.py  flaskapi.py  generate_keys.py  index.html  init_db.py  main.py  mkdocs.yml  package-lock.json  pyproject.toml  requirements.txt  seed_data.py  sysd.sh  test_commit.py
.github/workflows/: Python Dev CI CD.yml  main.yml
.vent-test2/: pyvenv.cfg
.venv-test/: pyvenv.cfg
app/: __init__.py  main.py
app/auth/: guards.py
app/core/: database.py  import_data.py  init.py
app/data_ingestion/: interventions.xlsx  poc.py  ~$interventions.xlsx
app/db/: base.py  engine.py
app/docs/: openapi.json
app/models/: __init__.py  app_config.py  building_parameters.py  implemented_intervention.py  init.py  intervention.py  intervention_effect.py  intervention_theme_impacts.py  interventions.py  metric_effect.py  project_interventions.py  project_reports.py  project_theme_score.py  project_theme_weightings.py  project_themes_ratings.py  projects.py  runtime_score.py  stages.py  theme.py  themes.py  user.py  users.py
app/routes/: admin_users.py  auth.py  building_metrics.py  costing.py  data_ingestion.py  docs.py  example_route.py  get_metrics.py  graph.py  interventions.py  projects.py  recommender.py  (+3 more)
data/: Intervention.json  Interventions.json  Theme.json  base_effectiveness.json  building_metrics.json  intervention_dependencies.json  intervention_stages.json  themes.json
docs/: api.md
src/: system_state.py
(+75 files in other folders)
